// Vitest Snapshot v1

exports[`<ReferenceDetailHeader/> > should render 1`] = `
<ViewHeader
  title="baz"
>
  <ViewHeaderTitle>
    baz
    <ViewHeaderIcons>
      <ReferenceDetailHeaderIcon
        canModify={true}
        isRemote={true}
        onEdit={[MockFunction spy]}
      />
    </ViewHeaderIcons>
  </ViewHeaderTitle>
  <ViewHeaderAttribution
    time="foo"
    user={1}
  />
</ViewHeader>
`;

exports[`<ReferenceDetailHeader/> > should render when [showIcons=false] 1`] = `
<ViewHeader
  title="baz"
>
  <ViewHeaderTitle>
    baz
  </ViewHeaderTitle>
  <ViewHeaderAttribution
    time="foo"
    user={1}
  />
</ViewHeader>
`;

exports[`<ReferenceDetailHeaderIcon /> > should render 1`] = `
<Icon
  color="grey"
  name="lock"
/>
`;

exports[`<ReferenceDetailHeaderIcon /> > should render when [both canModify=false, isRemote=false] 1`] = `""`;

exports[`<ReferenceDetailHeaderIcon /> > should render when [canModify=false] 1`] = `
<Icon
  color="grey"
  name="lock"
/>
`;

exports[`<ReferenceDetailHeaderIcon /> > should render when [isRemote=false] 1`] = `
<Icon
  color="orange"
  name="pencil-alt"
  onClick={[MockFunction spy]}
  tip="Edit"
/>
`;
